All pages loading/polymer 2/ATM conversion

--- a/client/bower.json
+++ b/client/bower.json
@@ -19,30 +19,38 @@
     "tests"
   ],
   "dependencies": {
-    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
-    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "polymer": "Polymer/polymer#^1.7.0",
-    "google-web-components": "GoogleWebComponents/google-web-components#^1.1.1",
-    "vaadin-grid": "^1.1.2",
-    "polymer-paper-datatable": "jay8t6/paper-datatable#^0.9.16",
+    "polymer": "Polymer/polymer#^2.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "vaadin-grid": "^4.0.0",
+    "linkifyjs": "^2.1.5",
+    "iron-lazy-pages": "^2.1.1",
+    "paper-dialog": "^2.0.0",
+    "paper-dialog-scrollable": "^2.0.0",
+    "paper-header-panel": "^2.0.0",
+    "paper-scroll-header-panel": "^2.0.0",
+    "paper-menu-button": "^2.0.0",
+    "paper-tabs": "^2.0.0",
+    "iron-pages": "^2.0.0",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "iron-icons": "^2.0.0",
+    "app-pouchdb": "^2.0.0",
+    "paper-dropdown-menu": "^2.0.0",
+    "paper-progress": "^2.0.0",
+    "paper-listbox": "^2.0.0",
+    "app-route": "PolymerElements/app-route#^2.0.0",
+    "paper-toolbar": "^2.0.0",
+    "app-layout": "PolymerElements/app-layout#^2.0.4",
+    "vaadin-material-theme": "^0.3.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "paper-ripple": "PolymerElements/paper-ripple#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+    "promise-polyfill": "PolymerLabs/promise-polyfill#^2.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.1.0",
+    "highcharts": "^6.0.6",
     "iron-grid": "*",
-    "iron-data-table": "^1.0.2",
-    "highcharts-chart": "^1.1.4",
-    "app-elements": "PolymerElements/app-elements#^0.10.1",
-    "paper-datatable": "^0.9.8",
-    "pouchdb-find": "^0.10.3",
-    "highcharts": "^5.0.6",
-    "linkifyjs": "^2.1.4",
-    "start-google-analytics-tracker": "^1.1.1",
-    "iron-lazy-pages": "^1.5.1"
-  },
-  "resolutions": {
-    "firebase": "^3.0",
-    "polymer": "^1.7.0",
-    "paper-styles": "^1.1.4",
-    "paper-icon-button": "^1.1.1",
-    "paper-checkbox": "^1.2.0",
-    "paper-item": "^1.2.1",
-    "highcharts": "^5.0.6"
+    "paper-icon-button": "^2.1.0",
+    "iron-input": "^2.0.1",
+    "pouchdb": "^6.4.3"
   }
 }
