--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,21 @@
 {
-	"env": {
-		"es6" : true,
-		"browser": true,
-		"node": true
-	},
-	"rules" : {
-		"no-console": false
-	}
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+        "sourceType": "module"
+    },
+    "rules": {
+        "quotes": [
+            "error",
+            "double"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
+    }
 }
